2007-04-05	Joel Sherrill <joel@OARcorp.com>

	* user/example.texi: Change all obsoleted CONFIGURE_TEST_NEEDS_XXX
	configuration constants to CONFIGURE_APPLICATION_NEEDS_XXX.

2007-04-05	Joel Sherrill <joel@OARcorp.com>

	* user/task.t: Add rtems_iterate_over_all_threads.

2007-04-02	Joel Sherrill <joel@OARcorp.com>

	* user/clock.t: Add clock_get_uptime().

2007-03-28	Chris Johns <chrisj@rtems.org>

	* user/Makefile.am, user/clock.t: Add support for a handler to obtain
	the number of nanoseconds since the last clock tick. The primary
	interface for this is rtems_clock_set_nanoseconds_extension.
	Subsequent commits from Joel will redo the TOD support to use this
	capability.

2007-03-10	Joel Sherrill <joel@OARcorp.com>

	PR 1226/cpukit
	* user/conf.t: CONFIGURE_HAS_OWN_MULTIPROCESSING_TABLE not
	CONFIGURE_HAS_OWN_MULTIPROCESING_TABLE.

2007-03-08	Joel Sherrill <joel@OARcorp.com>

	* user/Makefile.am, user/stackchk.t: Change dump usage to report usage.

2007-03-06	Joel Sherrill <joel@OARcorp.com>

	* ada_user/Makefile.am, ada_user/ada_user.texi: Ada API manual now
	builds again.

2007-03-06	Joel Sherrill <joel@OARcorp.com>

	* user/Makefile.am, user/barrier.t, user/c_user.texi: Update barrier
	documentation.

2007-03-02	Joel Sherrill <joel@OARcorp.com>

	PR 1221/doc
	* user/rtmon.t: Add missing exponent operator in RMS CPU Utiliziation
	formula.

2007-01-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* setup.def: newlib-1.15.0.

2007-01-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* common/rtems.texi.in: Use bugzilla for RTEMSBUGS.
	Remove RTEMSGNATS.
	* started/binaries.t, started/buildc.t, started/tversions.texi.in:
	Various update to reflect current toolchains.
	* configure.ac: Reflect having moved setup.def.
	Eliminate gcc3*.	
	* setup.def: New (Formerly in ../scripts).

2006-12-20	Joel Sherrill <joel@OARcorp.com>

	* posix_users/thread.t: Correct spelling error.

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.
